Use --enable-preview for jdk19+ and replace deprecated -d option with --output